[add] file collegati

--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
 
   <div id="app">
 
+      <div class="container">
+        <div class="row">
+          ciao
+        </div>
+      </div>
 
   </div>
+
+  <script src="script.js"></script>
   
 </body>
 
