--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
   <!-- AXIOS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.js" integrity="sha512-pmaEGtUAy7E5gRmwjLqQAD/QWw0dL4Z59b6b+2HQkqQwQ+HcPLLb9/KbUNo5zr10WuXmbivK9nYVZOyDkMgZMg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
   <!-- VUE -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -26,8 +26,26 @@
   <div id="app">
 
       <div class="container">
-        <div class="row">
-          ciao
+        <div class="row row-cols-3  my-5">
+
+          <div 
+          v-for="(item, index) in disk"
+          :key="index"
+          class="col my-3">
+            <div class="card my-card text-center d-flex justify-content-center align-items-center text-white " style="width: 18rem;">
+              <img 
+              :src="item.poster" class="card-img-top w-75" 
+              :alt="item.title">
+              <div class="card-body">
+                <h5 class="card-title"> {{item.title}} </h5>
+                <p class="card-text"> {{item.author}} </p>
+                <h5 class="card-title"> {{item.year}} </h5>
+                <p class="card-text "> <small class="text-body-secondary text-white"></small>{{item.genre}} </small></p>
+                <!-- <p class="card-text "><small class="text-body-secondary text-white"> {{item.genre}} </small></p> -->
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
 
